ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Trivial - P5
    • 4.1.9
    • Affects Version/s: 4.0.2, 4.1.3
    • Component/s: None
    • None
    • Minor Change
    • ALL
    • Hide

      mongod --dbpath /tmp/y --networkMessageCompressors

      Show
      mongod --dbpath /tmp/y --networkMessageCompressors
    • Dev Tools 2019-03-11
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If I specify an invalid network message compressor I get an error:

      butler% /usr/local/m/versions/4.1.3/bin/mongod --dbpath /tmp/y --networkMessageCompressors x
      2018-12-10T11:48:54.654-0500 F CONTROL  [main] Failed global initialization: BadValue: Invalid network message compressor specified in configuration: x
      

      However if I omit the argument entirely like this:

      butler% /usr/local/m/versions/4.1.3/bin/mongod --dbpath /tmp/y --networkMessageCompressors
      

      ... then mongod starts up, without any compression configured:

      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten] MongoDB starting : pid=3584 port=27017 dbpath=/tmp/y 64-bit host=butler
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten] db version v4.1.3
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten] git version: 7c13a75b928ace3f65c9553352689dc0a6d0ca83
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten] allocator: tcmalloc
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten] modules: none
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten] build environment:
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten]     distarch: x86_64
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten]     target_arch: x86_64
      2018-12-10T11:52:23.493-0500 I CONTROL  [initandlisten] options: { net: { compression: { compressors: "disabled" } }, storage: { dbPath: "/tmp/y" } }
      2018-12-10T11:52:23.494-0500 I STORAGE  [initandlisten] Detected data files in /tmp/y created by the 'wiredTiger' storage engine, so setting the active storage engine to 'wiredTiger'.
      2018-12-10T11:52:23.494-0500 I STORAGE  [initandlisten] 
      2018-12-10T11:52:23.494-0500 I STORAGE  [initandlisten] ** WARNING: Using the XFS filesystem is strongly recommended with the WiredTiger storage engine
      2018-12-10T11:52:23.494-0500 I STORAGE  [initandlisten] **          See http://dochub.mongodb.org/core/prodnotes-filesystem
      2018-12-10T11:52:23.494-0500 I STORAGE  [initandlisten] wiredtiger_open config: create,cache_size=3376M,session_max=20000,eviction=(threads_min=4,threads_max=4),config_base=false,statistics=(fast),log=(enabled=true,archive=true,path=journal,compressor=snappy),file_manager=(close_idle_time=100000),statistics_log=(wait=0),verbose=(recovery_progress),
      2018-12-10T11:52:24.509-0500 I STORAGE  [initandlisten] WiredTiger message [1544460744:509647][3584:0x7f8c152e6a00], txn-recover: Main recovery loop: starting at 3/4864
      2018-12-10T11:52:24.681-0500 I STORAGE  [initandlisten] WiredTiger message [1544460744:681447][3584:0x7f8c152e6a00], txn-recover: Recovering log 3 through 4
      2018-12-10T11:52:24.792-0500 I STORAGE  [initandlisten] WiredTiger message [1544460744:792569][3584:0x7f8c152e6a00], txn-recover: Recovering log 4 through 4
      2018-12-10T11:52:24.877-0500 I STORAGE  [initandlisten] WiredTiger message [1544460744:877723][3584:0x7f8c152e6a00], txn-recover: Set global recovery timestamp: 0
      2018-12-10T11:52:25.121-0500 I RECOVERY [initandlisten] WiredTiger recoveryTimestamp. Ts: Timestamp(0, 0)
      2018-12-10T11:52:25.200-0500 I CONTROL  [initandlisten] 
      2018-12-10T11:52:25.200-0500 I CONTROL  [initandlisten] ** NOTE: This is a development version (4.1.3) of MongoDB.
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **       Not recommended for production.
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] 
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] ** WARNING: Access control is not enabled for the database.
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **          Read and write access to data and configuration is unrestricted.
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] 
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] ** WARNING: This server is bound to localhost.
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **          Remote systems will be unable to connect to this server. 
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **          Start the server with --bind_ip <address> to specify which IP 
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **          addresses it should serve responses from, or with --bind_ip_all to
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **          bind to all interfaces. If this behavior is desired, start the
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **          server with --bind_ip 127.0.0.1 to disable this warning.
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] 
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] 
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] ** WARNING: /sys/kernel/mm/transparent_hugepage/enabled is 'always'.
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] **        We suggest setting it to 'never'
      2018-12-10T11:52:25.201-0500 I CONTROL  [initandlisten] 
      2018-12-10T11:52:25.223-0500 I FTDC     [initandlisten] Initializing full-time diagnostic data capture with directory '/tmp/y/diagnostic.data'
      2018-12-10T11:52:25.223-0500 I NETWORK  [initandlisten] waiting for connections on port 27017
      

      I believe omitting the argument to networkmessagecompressors should be an error.

            Assignee:
            Andrew Morrow (Inactive)
            Reporter:
            Oleg Pudeyev (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: