SERVER-38503 Empty networkMessageCompressors is an error