jstests/noPassthrough/compression_options.js
@@ -39,6 +39,5 @@
 
     runTest("snappy", ["snappy"]);
     runTest("disabled", undefined);
-    runTest("", undefined);
 
 }());
